refactor(node): nook-module-node 全面对齐后端编码规范
- §7 注入统一 @Resource 字段注入, 字段名=类型全驼峰 (修正 SocksOps 遗留简称); 去除 @RequiredArgsConstructor (枚举构造器改 @AllArgsConstructor)
- §1/§14 类级 javadoc 命名约定 (Controller 管理后台- / ServiceImpl Service 实现类 / Validator 业务校验); 方法 javadoc yudao 极简风格
- §14 注释规范: @param/@return 去表.列改业务含义; 去调用场景/实现细节; 状态用 label 不用 raw code; 删 FK→表.列 与 DB 字段噪声; 自调用加 this. 前缀; Validator public 方法补完整 javadoc
- §14 数据载体 (VO/DTO/DO) 裸字段补单行业务含义注释
- §2 判空用 Hutool (ObjectUtil/CollUtil/MapUtil/StrUtil), 集合用 List.of/Map.of/Set.of 与 CollectionUtils; 去手写 ==null / .isEmpty() / Collections.emptyX / singletonList
- 注释去术语化: enrich→回填, reconcile→对账同步, CAS→条件更新, DB-only→仅写库, fallback→兜底 等; 删历史/踩坑叙述; 保留产品/工具真名 (xray/socks5/dante/agent 及 xray CLI 子命令)

构建通过 (仅既有 warning).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>